# Github-Actions-AI-Analyzer

./: .bandit  .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  .pypirc  AI_INTEGRATION_SUMMARY.md  ARCHIVE_NOTICE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  manual_test.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/: copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ai-quality-improvement.yml  ci.yml  release.yml  security.yml
.kiro/specs/mvp-analyzer/: design.md  requirements.md  tasks.md
.kiro/steering/: genaral_rules.md  product.md  structure.md  tech.md
docs/: Auto-Collect-and-Machine-Leaning.md  ai_quality_integration_guide.md  conf.py  genaral_rules.md  github_actions_ai_analyzer_issue.md  github_actions_ai_analyzer_spec.md  github_actions_ai_analyzer_structure.md  index.rst
docs/completed/: github_actions_ai_analyzer_structure.md
examples/: basic_usage.py
reports/: .gitkeep  ci_report_sample.json  enhanced_ai_analysis_report_20250802_101908.md  enhanced_ai_analysis_report_20250802_103338.md  enhanced_ai_analysis_report_20250802_104420.md  failed_workflow_analysis_report.md
scripts/: build.py  bump_version.py  publish.py
src/github_actions_ai_analyzer/: __init__.py
src/github_actions_ai_analyzer/cli/: __init__.py  main.py
src/github_actions_ai_analyzer/core/: __init__.py  ai_prompt_optimizer.py  analyzer.py  context_collector.py  log_processor.py  pattern_matcher.py
src/github_actions_ai_analyzer/types/: __init__.py  analysis_types.py  context_types.py  log_types.py  pattern_types.py
test_logs/: github_actions_log.txt  requirements.txt
test_logs/.github/workflows/: ci.yml
tests/: test_ci_setup.py
tests/integration/: __init__.py  test_basic_integration.py
tests/unit/: test_log_processor.py
tests/unit/core/: test_analyzer.py  test_context_collector.py  test_pattern_matcher.py
tools/: __init__.py  gh_log_collector.py  github_actions_ai_analyzer.py  github_actions_ai_analyzer_enhanced.py
